--- a/style/main.css
+++ b/style/main.css
@@ -1,7 +1,7 @@
 .label_tooltip {
     background-color: rgba(255, 255, 255, 1);
-    font-family: "Inconsolata", sans-serif;
-    font-weight: bold;
+    font-family: "Lora", sans-serif;
+    font-weight: 900;
     border: 2px solid rgba(255, 255, 255, 1);
     box-shadow: 2px 2px rgba(0, 0, 0, 0.5);
 }
