--- a/src/storymap.2.5.css
+++ b/src/storymap.2.5.css
@@ -28,7 +28,7 @@ body {
 
 h1 {
     margin-top: 25%;
-    font-family: Cairo, sans-serif;
+    font-family: Lara, sans-serif;
     color: rgba(255, 255, 255, 0.95);
     font-size: 4vw;
     text-shadow: 0 0 6px rgba(0, 0, 0, .95);
