--- a/style/main.css
+++ b/style/main.css
@@ -2,7 +2,7 @@
     background-color: rgba(255, 255, 255, 1);
     font-family: "Lora", sans-serif;
     font-weight: 600;
-    font-size: 8pt,
+    font-size: 8pt;
     border: 2px solid rgba(255, 255, 255, 1);
     box-shadow: 2px 2px rgba(0, 0, 0, 0.5);
 }
