adding more mbtiles, monkeying with scenes

--- a/src/storymap.2.5.css
+++ b/src/storymap.2.5.css
@@ -9,7 +9,7 @@ html {
 
 body {
     height: 100%;
-    font-family: Philosopher, sans-serif;
+    font-family: Tenor Sans, sans-serif;
     font-size: 14px;
 }
 
